@@ -1,7 +1,5 @@
 AUX gcc-4.3.1-comp.patch 558 RMD160 2c77de425089653d5a22396f98d859ffa7605b2e SHA1 0ead842d18d53548913c2e44ee1da1b00df64424 SHA256 6730ed7184ec73deec280c13fa0a7d37773b41257569128539769525b4764a30
-DIST makedict-0.3.1-beta1-Source.tar.bz2 65891 RMD160 8c1ce12eb81cd3bd4eb68b4f0687bbb537131a4a SHA1 31bb87f7f99ab3bd2304d6cd8d13ea5537a47f27 SHA256 9c39cc43b6fc1c397753038e54bb6fc9f62f84364762c5d58d3a5b4cc2fd2099
 DIST makedict-0.3.tar.bz2 133855 RMD160 81de006fd93ff0b7d626759895a6845965abba86 SHA1 798cdd3a481384e207f58b40197f891bf7f61fce SHA256 7a7a345cfe9bdd179d30a56f503fdfa53990efedb94fb150203feb82cfa25517
-EBUILD makedict-0.3.1_beta1.ebuild 703 RMD160 9f23c7b563492eb59673cfc183c86ee083055d61 SHA1 8430bf83ecc6b4421ef72581cb7d80accae7b677 SHA256 ce520538d66d10d1e6e11b3d2cfe96e17343c4e3992c758c6d6b29a5ee141b02
 EBUILD makedict-0.3.ebuild 382 RMD160 33f3e36130b6e4ddd3d55daa2a5b5b83aba307cc SHA1 f93307e5dd03881b1c0ecdd4a33f11b102e60716 SHA256 9f08d876366050cdc7575a1cacf4b394dd40fb9f43ec8625d87160d623f4e19a
-MISC ChangeLog 310 RMD160 b6c761ad90cef8106093ad93ca054280174cdf2b SHA1 c61f4113985565233ba0ea75769dfc6e8ed09e6d SHA256 26ddb15e489d4d30d2667c6c97303c488273154e78715e562a38b56fedd20f30
+MISC ChangeLog 432 RMD160 b59654a0da5edad3a1f7699e47cd13cb24446c36 SHA1 1973ab1ccf88fdb5ed095756ddae514fdac9fff9 SHA256 5879b3504509002cc6c81803bc642993427e7f20696b37f88fb86ceebbeac6a6
 MISC metadata.xml 365 RMD160 691018c5ce6e2eb8d9a29c138e5a5fbc0668f323 SHA1 67a86a569a207cf63a2069a93390043436f9f4ff SHA256 d3292c889cc8b28ff8bb1634fcc64079ace9f3dd971358b659a5cd5514af2977
